First PaintAPP Release

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:;">
     <title>PaintAPP</title>
-    <link rel="stylesheet" href="./Paint.css" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./Reset.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./paint.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./reset.css" crossorigin="anonymous" />
     <!-- Material icons -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -33,7 +33,7 @@
     <nav id="MainNavbar">
         <div id="Titlebar-Dragable"></div>
         <div class="contentTEXT">
-            <h1>Paint app</h1>
+            <h1>PaintAPP</h1>
         </div>
         <ul>
             <li id="GotoHomePage"><a href="index.html">
@@ -107,7 +107,7 @@
 
     <div class="AnimBackgroundBlur" id="AnimBackgroundBlur"></div>
 
-    <script src="./Paint.js" defer></script>
+    <script src="./paint.js" defer></script>
 </body>
 
 </html>
