--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self'">
     <title>PaintAPP</title>
-    <link rel="stylesheet" href="./paint.css" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./reset.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./frontend/stylesheet/paint.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./frontend/stylesheet/reset.css" crossorigin="anonymous" />
     <!-- Material icons -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -60,8 +60,8 @@
 
     <div class="AnimBackgroundBlur" id="AnimBackgroundBlur"></div>
 
-    <script src="./paint.js" defer></script>
-    <script src="./data-loader.js" defer></script>
+    <script src="./frontend/paint/paint.js" defer></script>
+    <script src="./frontend/data/data-loader.js" defer></script>
 </body>
 
 </html>
