Added a component for Paint files to make it easier to maintain, along with a JSON config file for additional support.

--- a/src/index.html
+++ b/src/index.html
@@ -60,8 +60,8 @@
 
     <div class="AnimBackgroundBlur" id="AnimBackgroundBlur"></div>
 
-    <script src="./frontend/paint/paint.js" defer></script>
-    <script src="./frontend/data/data-loader.js" defer></script>
+    <script src="./frontend/paint/paint.js" type="module"></script>
+    <script src="./frontend/data/data-loader.js" type="module"></script>
 </body>
 
 </html>
