--- a/src/index.html
+++ b/src/index.html
@@ -51,8 +51,8 @@ License: MIT
 
     <div id="canvas-area"></div>
 
-    <script src="./frontend/paint/paint.js" type="module"></script>
-    <script src="./frontend/data/data-loader.js" type="module"></script>
+    <script src="../dist/frontend/paint/paint.js" type="module"></script>
+    <script src="../dist/frontend/data/data-loader.js" type="module"></script>
 </body>
 
 </html>
